--- a/Data_Structures/Doubly_Linked_and_circularLL.ipynb
+++ b/Data_Structures/Doubly_Linked_and_circularLL.ipynb
@@ -401,11 +401,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Circular Linked List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Circular linked list** is a linked list where **all nodes are connected to form a circle**. There is **no NULL at the end**. A circular linked list can be a singly circular linked list or doubly circular linked list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Advantages of Circular Linked Lists:**\n",
+    "\n",
+    "1. Any node can be a starting point. We can traverse the whole list by starting from any point. We just need to stop when the first visited node is visited again.\n",
+    "\n",
+    "2. Useful for implementation of queue. Unlike this implementation, we don’t need to maintain two pointers for front and rear if we use circular linked list. We can maintain a pointer to the last inserted node and front can always be obtained as next of last.\n",
+    "\n",
+    "3. Circular lists are useful in applications to repeatedly go around the list. \n",
+    "\n",
+    "4. Circular Doubly Linked Lists are used for implementation of advanced data structures like Fibonacci Heap.\n",
+    "\n",
+    "\n",
+    "**To implement a circular singly linked list, we take an external pointer that points to the last node of the list**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![titel](https://cdncontribute.geeksforgeeks.org/wp-content/uploads/CircularSinglyLinkedList.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insertion operation\n",
+    "1. Insertion in an empty list\n",
+    "2. Insertion at the beginning of the list\n",
+    "3. Insertion at the end of the list\n",
+    "4. Insertion in between the nodes\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node: \n",
+    "      \n",
+    "    # Constructor to create  a new node \n",
+    "    def __init__(self, data): \n",
+    "        self.data = data  \n",
+    "        self.next = None\n",
+    "\n",
+    "class CircularLinkedList: \n",
+    "      \n",
+    "    # Constructor to create a empty circular linked list \n",
+    "    def __init__(self): \n",
+    "        self.head = None\n",
+    "  \n",
+    "    # Function to insert a node at the beginning of a \n",
+    "    # circular linked list \n",
+    "    def push(self, data): \n",
+    "        ptr1 = Node(data) \n",
+    "        temp = self.head \n",
+    "          \n",
+    "        ptr1.next = self.head \n",
+    "  \n",
+    "        # If linked list is not None then set the next of \n",
+    "        # last node \n",
+    "        if self.head is not None: \n",
+    "            while(temp.next != self.head): \n",
+    "                temp = temp.next \n",
+    "            temp.next = ptr1 \n",
+    "  \n",
+    "        else: \n",
+    "            ptr1.next = ptr1 # For the first node \n",
+    "  \n",
+    "        self.head = ptr1  \n",
+    "  \n",
+    "    # Function to print nodes in a given circular linked list \n",
+    "    def printList(self): \n",
+    "        temp = self.head \n",
+    "        if self.head is not None: \n",
+    "            while(True): \n",
+    "                print \"%d\" %(temp.data), \n",
+    "                temp = temp.next\n",
+    "                if (temp == self.head): \n",
+    "                    break \n",
+    "  "
+   ]
   }
  ],
  "metadata": {
