--- a/Data_Structures/Binary Tree.ipynb
+++ b/Data_Structures/Binary Tree.ipynb
@@ -274,6 +274,283 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binary Search Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Binary Search Tree** is a node-based binary tree data structure which has the **following properties:**\n",
+    "\n",
+    "1. The left subtree of a node contains only nodes with keys lesser than the node’s key.\n",
+    "2. The right subtree of a node contains only nodes with keys greater than the node’s key.\n",
+    "3. The left and right subtree each must also be a binary search tree.\n",
+    "![title](https://cdncontribute.geeksforgeeks.org/wp-content/uploads/BSTSearch.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above properties of **Binary Search Tree** provide an ordering among keys so that the **operations like search, minimum and maximum can be done fast**. If there is no ordering, then we may have to compare every key to search a given key."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Operations:\n",
+    "### Search\n",
+    "To search a given key in Binary Search Tree, we first compare it with root, if the key is present at root, we return root. If key is greater than root’s key, we recur for right subtree of root node. Otherwise we recur for left subtree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(root,key): \n",
+    "      \n",
+    "    if root is None or root.val == key: \n",
+    "        return root \n",
+    "  \n",
+    "    if root.val < key: \n",
+    "        return search(root.right,key) \n",
+    "     \n",
+    "    return search(root.left,key) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insertion\n",
+    "A new key is **always inserted at leaf**. We start searching a key from root till we hit a leaf node. Once a leaf node is found, the new node is added as a child of the leaf node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BinaryTree:\n",
+    "    def __init__(self, data):\n",
+    "        self.node = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "def bstInsert(root, key):\n",
+    "    Node = BinaryTree(key)\n",
+    "    if root == None:\n",
+    "        root = Node\n",
+    "    \n",
+    "    else:\n",
+    "        if root.node > key:\n",
+    "            if root.left == None:\n",
+    "                root.left = Node\n",
+    "            else:\n",
+    "                bstInsert(root.left, key)\n",
+    "        else:\n",
+    "            if root.right == None:\n",
+    "                root.right = Node\n",
+    "            else:\n",
+    "                bstInsert(root.right, key)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = BinaryTree(50) \n",
+    "bstInsert(r,30) \n",
+    "bstInsert(r,20) \n",
+    "bstInsert(r,40) \n",
+    "bstInsert(r,70) \n",
+    "bstInsert(r,60) \n",
+    "bstInsert(r,80) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "inorder_traversal(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inorder traversal of BST always produces sorted output.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deletion\n",
+    "1. **Node to be deleted is leaf**: Simply remove from the tree\n",
+    "2. **Node to be deleted has only one child:** Copy the child to the node and delete the child\n",
+    "3. **Node to be deleted has two children:** Find inorder successor of the node. Copy contents of the inorder successor to the node and delete the inorder successor. Note that inorder predecessor can also be used. The important thing to note is, inorder successor is needed only when right child is not empty. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minVal(tree):\n",
+    "    current = tree\n",
+    "    while(current.left is not None):\n",
+    "        current = current.left\n",
+    "    return current\n",
+    "\n",
+    "def delete_node(tree, key):\n",
+    "    if tree is None:\n",
+    "        return tree\n",
+    "    \n",
+    "    if key < tree.node:\n",
+    "        tree.left = delete_node(tree.left, key)\n",
+    "    \n",
+    "    elif key > tree.node:\n",
+    "        tree.right = delete_node(tree.right, key)\n",
+    "    \n",
+    "    else:\n",
+    "        if tree.left is None:\n",
+    "            temp = tree.right\n",
+    "            tree = None\n",
+    "            return temp\n",
+    "        elif tree.right is None:\n",
+    "            temp = tree.left\n",
+    "            tree = None\n",
+    "            return temp\n",
+    "        else:\n",
+    "            succesor = minVal(tree.right)\n",
+    "            tree.node = succesor.node\n",
+    "            tree.right = delete_node(tree.right, succesor.node) \n",
+    "        \n",
+    "    return tree\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = BinaryTree(50) \n",
+    "bstInsert(r,30) \n",
+    "bstInsert(r,20) \n",
+    "bstInsert(r,40) \n",
+    "bstInsert(r,70) \n",
+    "bstInsert(r,60) \n",
+    "bstInsert(r,80) \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "inorder_traversal(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = delete_node(r, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "inorder_traversal(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Advantages of BST over Hash Table**\n",
+    "Hash Table supports following operations in Θ(1) time.\n",
+    "1. Search\n",
+    "2. Insert\n",
+    "3. Delete\n",
+    "\n",
+    "The time complexity of above operations in a self-balancing Binary Search Tree (BST) (like Red-Black Tree, AVL Tree, Splay Tree, etc) is O(Logn).\n",
+    "So Hash Table seems to beating BST in all common operations. When should we prefer BST over Hash Tables, what are advantages. \n",
+    "\n",
+    "**Following are some important points in favor of BSTs**\n",
+    "\n",
+    "1. We can get all keys in sorted order by just doing Inorder Traversal of BST\n",
+    "2.Doing order statistics, finding closest lower and greater elements, doing  range queries are easy to do with BSTs. \n",
+    "3. BSTs are easy to implement compared to hashing, we can easily implement our own customized BST. \n",
+    "4. With Self-Balancing BSTs, all operations are guaranteed to work in O(Logn) time. But with Hashing, Θ(1) is average time and some particular operations may be costly, especially when table resizing happens.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
